# fmu4cpp

./: CMakeLists.txt  LICENSE  README.md  model_info.json
.github/workflows/: config.yml  cross-compile.yml  cross-compile.yml_  draft-pdf.yml
cmake/: builder.py  generate_fmu.cmake
doc/paper/: paper.bib  paper.md
examples/: CMakeLists.txt  sine.cpp
examples/BouncingBall/: CMakeLists.txt  bouncing_ball.cpp
examples/BouncingBall/documentation/: index.html
examples/Dahlquist/: CMakeLists.txt  dahlquist.cpp
examples/ExternalInterfaceLib/: CMakeLists.txt  external_interface_lib.cpp
examples/ExternalLib/: CMakeLists.txt
examples/ExternalSharedLib/: CMakeLists.txt  external_lib.cpp
examples/Identity/: CMakeLists.txt  model.cpp
examples/Resource/: CMakeLists.txt  resource.cpp
examples/SimplePendulum/: CMakeLists.txt  simple_pendulum.cpp
examples/VanDerPol/: CMakeLists.txt  van_der_pol.cpp
examples/mass_spring_damper/: CMakeLists.txt  ChartConfig.xml  SystemStructure.ssd.in  damper.cpp  mass.cpp  simulate_with_ecos.sh  spring.cpp
examples/opencv/: CMakeLists.txt  readme.txt  run_tracking.py  tracking.cpp
export/: CMakeLists.txt  descriptionGenerator.cpp
export/examples/: CMakeLists.txt
export/examples/BouncingBall/: CMakeLists.txt  bouncing_ball.cpp
export/examples/ExternalLib/: external_lib.cpp
export/examples/Resource/: CMakeLists.txt  resource.cpp
export/examples/SimplePendulum/: CMakeLists.txt  simple_pendulum.cpp
export/examples/VanDerPol/: CMakeLists.txt  van_der_pol.cpp
export/fmu4cpp/: fmi2.cpp  fmu_base.cpp  fmu_base.hpp  fmu_except.hpp  fmu_variable.cpp  fmu_variable.hpp  lib_info.hpp  model_info.cpp.in  model_info.hpp  time.hpp  uuid.hpp
export/include/fmu4cpp/: fmu_base.hpp  fmu_except.hpp  fmu_variable.hpp  lib_info.hpp  logger.hpp  model_info.hpp  status.hpp  variable_access.hpp
export/src/: CMakeLists.txt
export/src/fmu4cpp/: fmi2.cpp  fmi3.cpp  fmu_base.cpp  fmu_variable.cpp  hash.hpp  lib_info.cpp.in  model_identifier.cpp.in  time.hpp  util.hpp
export/src/fmu4cpp/fmi2/: fmi2.cpp  fmi2_description.cpp
export/src/fmu4cpp/fmi3/: fmi3.cpp  fmi3_description.cpp
export/tests/: CMakeLists.txt  array_test.cpp  basic_test.cpp  bouncingball_test.cpp  identity_test.cpp  test_resource.cpp
export/tests/fmi2/: CMakeLists.txt  array_test.cpp  bouncing_ball_test.cpp  identity_test.cpp
export/tests/fmi3/: CMakeLists.txt  array_test.cpp  binary_test.cpp  bouncing_ball_test.cpp  identity_test.cpp
export/tests/models/: BouncingBall.hpp  Identity.hpp
export/tests/resources/: data.txt
include/fmu4cpp/: fmu_base.hpp  fmu_variable.hpp
resources/: readme.txt
src/: CMakeLists.txt  identity.cpp  model.cpp
src/fmu4cpp/: fmi2.cpp  fmu_base.cpp  uuid.hpp
tests/: CMakeLists.txt  basic_test.cpp
