
add_subdirectory(BouncingBall)
add_subdirectory(SimplePendulum)
add_subdirectory(Resource)
add_subdirectory(VanDerPol)
add_subdirectory(ExternalSharedLib)
add_subdirectory(ExternalInterfaceLib)
add_subdirectory(Identity)
add_subdirectory(Dahlquist)
add_subdirectory(mass_spring_damper)

find_package(OpenCV QUIET)
if (OpenCV_FOUND)
    message("OpenCV found, building OpenCV example(s)...")
    add_subdirectory(opencv)
endif ()
